bootstarp inital setup

--- a/E-HUB-FE/ecart/src/app/app.component.html
+++ b/E-HUB-FE/ecart/src/app/app.component.html
@@ -6,6 +6,12 @@
   <title>Document</title>
 </head>
 <body>
-  Welcome World!!!
+  <nav class="navbar bg-primary border-bottom border-body" data-bs-theme="primary">
+    <div class="container-fluid">
+      <a class="navbar-brand text-white" href="#">
+        <h5 class="mx-3 my-0">E-HUB</h5>
+      </a>
+    </div>
+  </nav>
 </body>
 </html>
