--- a/E-HUB-FE/ecart/src/app/app.component.html
+++ b/E-HUB-FE/ecart/src/app/app.component.html
@@ -6,12 +6,39 @@
   <title>Document</title>
 </head>
 <body>
-  <nav class="navbar bg-primary border-bottom border-body" data-bs-theme="primary">
+
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand text-white" href="#">
+      <a class="navbar-brand text-white" routerLink="dashboard">
         <h5 class="mx-3 my-0">E-HUB</h5>
       </a>
+      
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="d-flex justify-content-end">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <!-- <li class="nav-item dropdown"> -->
+              <!-- <button class="btn me-2 px-0 py-0">
+                <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <i class="bi bi-person-circle text-white"></i> Login
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#"><i class="bi bi-box-arrow-in-right"></i> sign in</a></li>
+                </ul>
+              </button> -->
+            <!-- </li> -->
+            <li class="nav-item">
+              <button class="btn btn-warning me-2" routerLink="createstore">Create store <i class="bi bi-shop"></i></button>
+            </li>
+          </ul>
+        </div>
+      </div>
+      
     </div>
   </nav>
 </body>
 </html>
+
+<router-outlet></router-outlet>
