--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vendever</title>
 </head>
+
 <body>
-  <nav class="navbar bg-primary border-bottom border-body" data-bs-theme="primary">
-    <div class="container-fluid">
-      <a class="navbar-brand text-white" href="#">
-        <h5 class="mx-3 my-0">Vendever</h5>
-      </a>
-    </div>
-  </nav>
+  <app-log-in></app-log-in>
 </body>
+
 </html>
