--- a/E-HUB-FE/ecart/src/app/store/store.component.html
+++ b/E-HUB-FE/ecart/src/app/store/store.component.html
@@ -3,18 +3,18 @@
         <div class="col-12">
             <form [formGroup]="store_data" (ngSubmit)="get_store_Data()">
                 <label>Username</label>
-                <input type="text" placeholder="name" formControlName = 'username'>
-                
+                <input type="text" placeholder="name" formControlName='username'>
+
                 <br><br>
                 <label>password</label>
-                <input type="password" placeholder="password" formControlName = 'password'>
+                <input type="password" placeholder="password" formControlName='password'>
                 <br><br>
                 <label>email id</label>
-                <input type="text" placeholder="email id" formControlName = 'email_id'>
+                <input type="text" placeholder="email id" formControlName='email_id'>
                 <br><br>
                 <label>image</label>
-                <input type="file" placeholder="image" formControlName = 'img' (change)="onFileChanged($event)">
-                
+                <input type="file" placeholder="image" formControlName='img' (change)="onFileChange($event)">
+                <br><br>
                 <button type="submit">Create</button>
             </form>
         </div>
