--- a/src/app/authentication/log-in/log-in.component.html
+++ b/src/app/authentication/log-in/log-in.component.html
@@ -1,8 +1,8 @@
 <section class="gradient-custom">
-    <div class="container h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
+    <div class="container vh-100">
+        <div class="row d-flex justify-content-center align-items-center vh-100">
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                <div class="card bg-dark text-white" style="border-radius: 1rem;">
+                <div class="card bg-dark text-white container vh-60">
                     <div class="card-body text-center">
 
                         <div class="mb-md-5 mt-md-4 pb-5">
@@ -20,20 +20,17 @@
                                 <label class="form-label" for="typePasswordX">Password</label>
                             </div>
 
-                            <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
+                            <p class="small mb-5 pb-lg-2"><a routerLink="/forgotPassword" class="text-white-50">Forgot
+                                    password?</a></p>
 
-                            <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
-
-                            <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                                <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
-                                <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                                <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
-                            </div>
+                            <button class="btn btn-outline-light btn-lg px-5" type="submit"
+                                (click)="onLogin($event)">Login</button>
 
                         </div>
 
                         <div>
-                            <p class="mb-0">Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign
+                            <p class="mb-0">Don't have an account? <a routerLink="/register"
+                                    class="text-white-50 fw-bold">Sign
                                     Up</a>
                             </p>
                         </div>
