angular_json setup

--- a/src/app/authentication/log-in/log-in.component.html
+++ b/src/app/authentication/log-in/log-in.component.html
@@ -43,3 +43,8 @@
         </div>
     </div>
 </section>
+
+<div class="input-group flex-nowrap">
+    <span class="input-group-text" id="addon-wrapping"><i class="bi bi-person-bounding-box"></i></span>
+    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
+  </div>
