--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,14 +1,44 @@
-<div class="container">
-    <div class="row justify-content-center align-items-center">
-        <div class="col-6">
-            <div class="card">
-                hi
+<div class="container-fluid d-flex justify-content-center align-items-center  min-vh-100">
+    <div class="row border rounded-3 bg-white shadow box-area">
+
+        <div class="col-md-5 my-3 mx-3 rounded-3 d-flex justify-content-center align-items-center flex-column " style="background-color: #8e4cf8;">
+            <div class="featured-image my-3">
+                <img src="./assets/images/register.svg" class="img-fluid rounded-4" alt="no img" style="width: 450px;">
+            </div>
+            <!-- <p class="text-white fs-5 para">Welcome to Vendever</p> -->
+        </div>
+
+        <div class="col-md-5 mx-3 my-3">
+            <p class="fs-4 para"><b>Welcome to Vendever</b></p>
+            <form>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-bounding-box"></i></span>
+                    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1"><i class="bi bi-key-fill"></i></span>
+                    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1"><i class="bi bi-envelope-fill"></i></span>
+                    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                </div>
+                <button class="btn bg-warning col-12 mx-auto">Register</button>
+            </form>
+            <hr>
+            <div class="row">
+                <div class="col-12 text-center px-3">
+                    <button class="btn btn-lg"><i class="bi bi-google"></i></button>
+                    <button class="btn btn-lg"><i class="bi bi-facebook"></i></button>
+                    <button class="btn btn-lg"><i class="bi bi-twitter-x"></i></button>
+                </div> 
+            </div>
+            <div class="row mt-2">
+                <div class="col-md-12 text-center">
+                    <p>Already have account? <a href="#">Login</a></p>
+                </div>
             </div>
         </div>
-        <div class="col-6">
-            <div class="card">
-                hi
-            </div>
-        </div>
+
     </div>
 </div>
