--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,18 +19,11 @@
       <div class="d-flex justify-content-end">
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
-            <!-- <li class="nav-item dropdown"> -->
-              <!-- <button class="btn me-2 px-0 py-0">
-                <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <i class="bi bi-person-circle text-white"></i> Login
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#"><i class="bi bi-box-arrow-in-right"></i> sign in</a></li>
-                </ul>
-              </button> -->
-            <!-- </li> -->
             <li class="nav-item">
-              <button class="btn btn-warning me-2" routerLink="createstore">Create store <i class="bi bi-shop"></i></button>
+              <button class="btn btn-warning me-2" routerLink="register"><i class="bi bi-person"></i> Register</button>
+            </li>
+            <li class="nav-item">
+              <button class="btn btn-warning me-2" routerLink="createstore"><i class="bi bi-shop"></i> Create store</button>
             </li>
           </ul>
         </div>
