--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,9 @@
 
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand text-white" routerLink="dashboard">
-        <h5 class="mx-3 my-0">Vendever</h5>
+      <a class="navbar-brand text-white d-flex" routerLink="dashboard">
+        <!-- <img src="./assets/images/logo.png" style="width: 24px;height: 24px;"> -->
+        <h5 class="mx-3 my-0 text-warning">Vendever</h5>
       </a>
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
