--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -23,7 +23,7 @@
                     <span class="input-group-text" id="basic-addon1"><i class="bi bi-envelope-fill"></i></span>
                     <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
                 </div>
-                <button class="btn bg-warning col-12 mx-auto">Register</button>
+                <button class="btn bg-warning col-12 mx-auto" (click)="register()">Register</button>
             </form>
             <hr>
             <div class="row">
