--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -10,20 +10,20 @@
 
         <div class="col-md-5 mx-3 my-3">
             <p class="fs-4 para"><b>Welcome to Vendever</b></p>
-            <form>
+            <form [formGroup]="registerForm" (ngSubmit)="register()">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-bounding-box"></i></span>
-                    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" formControlName="username">
                 </div>
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1"><i class="bi bi-key-fill"></i></span>
-                    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                    <input type="password" class="form-control" placeholder="password" aria-label="Password" aria-describedby="basic-addon1" formControlName="password">
                 </div>
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1"><i class="bi bi-envelope-fill"></i></span>
-                    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                    <input type="text" class="form-control" placeholder="Email-ID" aria-label="Email-ID" aria-describedby="basic-addon1" formControlName="email">
                 </div>
-                <button class="btn bg-warning col-12 mx-auto" (click)="register()">Register</button>
+                <button type="submit" class="btn bg-warning col-12 mx-auto">Register</button>
             </form>
             <hr>
             <div class="row">
