--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,16 @@
       </button>
       <div class="d-flex justify-content-end">
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
+          <ul class="navbar-nav"> 
+            <li class="nav-item dropdown" *ngIf="isLoggedIn" >
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style = "color:white;">
+                <i class="bi bi-person fs-5"></i>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" (click)="signout()"><i class="bi bi-box-arrow-right"></i> Sign out</a></li>
+              </ul>
+            </li>
+            <li class="nav-item" *ngIf="!isLoggedIn">
               <button class="btn btn-warning me-2" routerLink="register"><i class="bi bi-person"></i> Register</button>
             </li>
             <li class="nav-item">
